--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <span class="badge badge-dark">*Комуналка*</span>
                 <hr> 
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
-                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабин.Газ.2019</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span></li>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.электр.</span></li>
                 <li><img class="icon" src="img/kiroe.com.ua.ico" alt="kiroe.com.ua"><a href="http://kiroe.com.ua/" target="_blank">kiroe</a><span class="opisi">Кабинет.Кир.обленерго</span></li>
                 <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртелеком СЧЕТ</span></li>
@@ -936,7 +936,7 @@
                 <hr>
                 <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin.com.ua"><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com.ua</a><span class="opisi">офц.цена.газ</span></li>
                 <li><img class="icon" src="img/prostobank.ua.png" alt="prostobank.ua"><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.газ</span></li>
-                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogazpostach</a><span class="opisi">Кабин.Газ.2019</span></li>
+                <li><img class="icon" src="img/naftogazpostach.com.png" alt="naftogazpostach.com"><a href="https://naftogazpostach.com/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span></li>
                 <li><img class="icon" src="img/gasolina-online.com.png" alt="gasolina-online.com"><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Кабинет.Газ.(старый)</span></li>
                 <li><img class="icon" src="img/104.ua.png" alt="104.ua"><a href="https://104.ua/ua/" target="_blank">104.ua</a><span class="opisi">Поиск компании</span></li>
               </ul>
