--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                 <li><img class="icon" src="img/ukr.net.ico" alt="ukr.net"><a href="https://www.ukr.net/" target="_blank">Ukr.net</a></li>
                 <li><img class="icon" src="img/unian.net.ico" alt="Unian.net"><a href="https://www.unian.net/" target="_blank">Unian.net</a></li>				
                 <li><img class="icon" src="img/sis.at.ua.ico" alt="sis.at.ua"><a href="http://sis.at.ua/" target="_blank">Нужные ШТУЧКИ!</a></li>
+                <li><img class="icon" src="img/myscore.com.ua.png" alt="myscore.com.ua"><a href="https://www.myscore.com.ua/" target="_blank">myscore.com.ua</a></li>
+				<li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/tsnukraine/videos" target="_blank">Youtube_ТСН</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UC9oI0Du20oMOlzsLDTQGfug" target="_blank">online_NEWSONE</a></li>
+                <li><img class="icon" src="img/rada.gov.ua.gif" alt="rada.gov.ua"><a href="https://rada.gov.ua/" target="_blank">Верховная Рада Украины</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Медиа*</span>
@@ -142,7 +146,8 @@
                 <span class="badge badge-dark">*Рынок*</span>
                 <hr>
                 <li><img class="icon" src="img/olx.ua.ico" alt="olx"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>
-                <li><img class="icon" src="img/besplatka.ua.ico" alt="besplatka"><a href="https://besplatka.ua/" target="_blank">besplatka.ua</a></li>
+                <li><img class="icon" src="img/besplatka.ua.ico" alt="besplatka.ua"><a href="https://besplatka.ua/" target="_blank">besplatka.ua</a></li>
+                <li><img class="icon" src="img/obyava.ua.ico" alt="obyava.ua"><a href="https://obyava.ua/" target="_blank">obyava.ua</a></li>
                 <li><img class="icon" src="img/shafa.ua.png" alt="shafa"><a href="https://shafa.ua/" target="_blank">shafa.ua</a></li>
                 <li><img class="icon" src="img/auto.ria.com.ico" alt="auto.ria.com"><a href="https://auto.ria.com/" target="_blank">auto.ria.com</a></li>
               </ul>
@@ -170,6 +175,7 @@
                 <li><img class="icon" src="img/online.aval.ua.ico" alt="online.aval.ua"><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span></li>
 				<li><img class="icon" src="img/payoneer.com.ico" alt="payoneer"><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer`</a><span class="opisi">Интернет кошелек</span></li>
                 <li><img class="icon" src="img/payeer.com.ico" alt="payeer"><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интернет кошелек</span></li>
+                <li><img class="icon" src="img/minfin.com.ua.ico" alt="minfin"><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span></li>
                 <li><img class="icon" src="img/kurs.com.ua.ico" alt="kurs.com.ua"><a href="https://kurs.com.ua/" target="_blank">kurs</a><span class="opisi">Курс/конверт валют</span></li>
                 <li><img class="icon" src="img/bestchange.ru.png" alt="bestchange.ru"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
               </ul>
@@ -287,91 +293,111 @@
 
 
         <div class="tab-pane fade" id="news" role="tabpanel" aria-labelledby="news-tab">
-          <div class="row">раздел будет запущен/сформирован до 30.02.2019
+          <div class="row">
 
-            <!--             <div class="col-sm">
+            <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Новости*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/ukr.net.ico" alt="ukr.net"><a href="https://www.ukr.net/" target="_blank">Ukr.net</a></li>
+                <li><img class="icon" src="img/unian.net.ico" alt="Unian.net"><a href="https://www.unian.net/" target="_blank">Unian.net</a></li>				
+                <li><img class="icon" src="img/112.ua.png" alt="112.ua"><a href="https://112.ua/" target="_blank">112.ua</a></li>
+                <li><img class="icon" src="img/unn.com.ua.ico" alt="unn.com.ua"><a href="https://www.unn.com.ua/" target="_blank">unn.com.ua</a></li>
+                <li><img class="icon" src="img/24tv.ua.png" alt="24tv.ua"><a href="https://24tv.ua/" target="_blank">24tv.ua</a></li>
+                <li><img class="icon" src="img/gazeta.ua.ico" alt="gazeta.ua"><a href="https://gazeta.ua/" target="_blank">gazeta.ua</a></li>
+                <li><img class="icon" src="img/ua.korrespondent.net.ico" alt="ua.korrespondent.net"><a href="https://ua.korrespondent.net/" target="_blank">ua.korrespondent.net</a></li>
+                <li><img class="icon" src="img/tsn.ua.ico" alt="tsn.ua"><a href="https://tsn.ua/" target="_blank">tsn.ua</a></li>
+                <li><img class="icon" src="img/pravda.com.ua.ico" alt="pravda.com.ua"><a href="https://www.pravda.com.ua/" target="_blank">pravda.com.ua</a></li>
+                <li><img class="icon" src="img/zik.ua.png" alt="zik.ua"><a href="https://zik.ua/" target="_blank">zik.ua</a></li>
+                <li><img class="icon" src="img/espreso.tv.png" alt="espreso.tv"><a href="https://espreso.tv/" target="_blank">espreso.tv</a></li>
+                <li><img class="icon" src="img/meta.ua.ico" alt="meta.ua"><a href="https://meta.ua/" target="_blank">meta.ua</a></li>
+                <li><img class="icon" src="img/i.ua.ico" alt="i.ua"><a href="https://www.i.ua/" target="_blank">i.ua</a></li>
+                <li><img class="icon" src="img/censor.net.ua.ico" alt="censor.net.ua"><a href="https://censor.net.ua/" target="_blank">censor.net.ua</a></li>
+                <li><img class="icon" src="img/nv.ua.png" alt="nv.ua"><a href="https://nv.ua/" target="_blank">nv.ua</a></li>
+                <li><img class="icon" src="img/obozrevatel.com.ico" alt="obozrevatel.com"><a href="https://www.obozrevatel.com/" target="_blank">obozrevatel.com</a></li>
+                <li><img class="icon" src="img/segodnya.ua.png" alt="segodnya.ua"><a href="https://www.segodnya.ua/" target="_blank">segodnya.ua</a></li>
+                <li><img class="icon" src="img/online.ua.ico" alt="online.ua"><a href="https://www.online.ua/" target="_blank">online.ua</a></li>
+                <li><img class="icon" src="img/liga.net.png" alt="liga.net"><a href="https://www.liga.net/" target="_blank">liga.net</a></li>
+                <li><img class="icon" src="img/expres.online.png" alt="expres.online"><a href="https://expres.online/" target="_blank">expres.online</a></li>
+                <li><img class="icon" src="img/telegraf.com.ua.ico" alt="telegraf.com.ua"><a href="https://telegraf.com.ua/" target="_blank">telegraf.com.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Всякое*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/sis.at.ua.ico" alt="sis.at.ua"><a href="http://sis.at.ua/" target="_blank">Нужные ШТУЧКИ!</a></li>
+                <li><img class="icon" src="img/dailytechinfo.org.png" alt="dailytechinfo.org"><a href="https://dailytechinfo.org/" target="_blank">dailytechinfo.org</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Новости спорта*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/myscore.com.ua.png" alt="myscore.com.ua"><a href="https://www.myscore.com.ua/" target="_blank">myscore.com.ua</a></li>
+                <li><img class="icon" src="img/football.ua.ico" alt="football.ua"><a href="https://football.ua/" target="_blank">football.ua</a></li>
+                <li><img class="icon" src="img/sport.ua.ico" alt="sport.ua"><a href="https://sport.ua/" target="_blank">sport.ua</a></li>
+                <li><img class="icon" src="img/sportonline.ua.png" alt="sportonline.ua"><a href="http://www.sportonline.ua/" target="_blank">sportonline.ua</a></li>
+                <li><img class="icon" src="img/sport-express.ua.png" alt="sport-express.ua"><a href="http://www.sport-express.ua/" target="_blank">sport-express.ua</a></li>
+                <li><img class="icon" src="img/isport.ua.ico" alt="isport.ua"><a href="https://isport.ua/" target="_blank">isport.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Новости на Youtube*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/tsnukraine/videos" target="_blank">Youtube_ТСН</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/sobytia/videos" target="_blank">Youtube_Сегодня</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/ViknaSTB/videos" target="_blank">Youtube_Вікна-новини</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/FaktyICTVchannel/videos" target="_blank">Youtube_Факти ICTV</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/Arxivnn/videos" target="_blank">Youtube_Надзвичайні новини. ICTV</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/podrobnosti/videos" target="_blank">Youtube_Подробности</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*online-Новости на Youtube*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCj4dH8kfRQFey9MYSENPNaQ" target="_blank">online_112 Украина</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UC9oI0Du20oMOlzsLDTQGfug" target="_blank">online_NEWSONE</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCja992VI_u2e52c9FHQXw5A" target="_blank">online_24 Канал</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCUOsDBuiB_1zkRixc33TgSg" target="_blank">online_Телеканал ZIK</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCH9H_b9oJtSHBovh94yB5HA" target="_blank">online_Телеканал Прямий</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCz7ttPTNO_S1PS9rNsCt_iA" target="_blank">online_НАШ</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/5channel" target="_blank">online_5 канал</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/SvobodaRadio/featured" target="_blank">online_Радио Свобода</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/user/euronewsru" target="_blank">online_euronews (на русском)</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Органы государственной власти Украины*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/president.gov.ua.png" alt="github"><a href="https://www.president.gov.ua/" target="_blank">Президент України</a></li>
+                <li><img class="icon" src="img/rada.gov.ua.gif" alt="rada.gov.ua"><a href="https://rada.gov.ua/" target="_blank">Верховная Рада Украины</a></li>
+                <li><img class="icon" src="img/kmu.gov.ua.png" alt="kmu.gov.ua"><a href="https://www.kmu.gov.ua/" target="_blank">Урядовий портал (КМУ)</a></li>
+                <li><img class="icon" src="img/bank.gov.ua.ico" alt="bank.gov.ua"><a href="https://www.bank.gov.ua/" target="_blank">Національний банк України</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Другие органы и министерства*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/comin.kmu.gov.ua.gif" alt="comin.kmu.gov.ua"><a href="http://comin.kmu.gov.ua/" target="_blank">Комітет телебачення і радіомовлення</a></li>
+                <li><img class="icon" src="img/minagro.gov.ua.ico" alt="minagro.gov.ua"><a href="http://www.minagro.gov.ua/" target="_blank">Мін. аграрної політики та продов.</a></li>
+                <li><img class="icon" src="img/mvs.gov.ua.png" alt="mvs.gov.ua"><a href="http://mvs.gov.ua/" target="_blank">Мін. внутрішніх справ</a></li>
+                <li><img class="icon" src="img/moz.gov.ua.png" alt="moz.gov.ua"><a href="http://moz.gov.ua/" target="_blank">Мін. охорони здоров'я України</a></li>
+                <li><img class="icon" src="img/minfin.gov.ua.ico" alt="minfin.gov.ua"><a href="https://www.minfin.gov.ua/" target="_blank">Мін. фінансів</a></li>
+                <li><img class="icon" src="img/me.gov.ua.ico" alt="me.gov.ua"><a href="http://www.me.gov.ua/" target="_blank">Мін. економічного розвитку і торгівлі</a></li>
+                <li><img class="icon" src="img/minjust.gov.ua.png" alt="minjust.gov.ua"><a href="https://minjust.gov.ua/" target="_blank">Мін. юстиції</a></li>
+                <li><img class="icon" src="img/drs.gov.ua.png" alt="drs.gov.ua"><a href="http://www.drs.gov.ua/" target="_blank">Державна регуляторна служба</a></li>
+                <li><img class="icon" src="img/dsns.gov.ua.png" alt="dsns.gov.ua"><a href="http://www.dsns.gov.ua/" target="_blank">Держ. служба з надзвичайних ситуацій</a></li>
+                <li><img class="icon" src="img/sfs.gov.ua.jpg" alt="sfs.gov.ua"><a href="http://sfs.gov.ua/" target="_blank">Державна фіскальна служба</a></li>
+                <li><img class="icon" src="img/dcz.gov.ua.ico" alt="dcz.gov.ua"><a href="https://www.dcz.gov.ua/" target="_blank">Державна служба зайнятості</a></li>
+                <li><img class="icon" src="img/pfu.gov.ua.png" alt="pfu.gov.ua"><a href="https://www.pfu.gov.ua/" target="_blank">Пенсійний фонд України</a></li>
+                <li><img class="icon" src="img/amc.gov.ua.ico" alt="amc.gov.ua"><a href="http://www.amc.gov.ua/" target="_blank">Антимонопольний комітет</a></li>
+                <li><img class="icon" src="img/msp.gov.ua.ico" alt="msp.gov.ua"><a href="https://www.msp.gov.ua/" target="_blank">Мін. соціальної політики</a></li>
+                <li><img class="icon" src="img/ukrstat.gov.ua.png" alt="ukrstat.gov.ua"><a href="http://www.ukrstat.gov.ua/" target="_blank">Державна служба статистики</a></li>
+                <li><img class="icon" src="img/nads.gov.ua.png" alt="nads.gov.ua"><a href="https://nads.gov.ua/" target="_blank">Нац. агентство з питань держ. служби</a></li>
+                <li><img class="icon" src="img/spfu.gov.ua.png" alt="spfu.gov.ua"><a href="http://www.spfu.gov.ua/" target="_blank">Фонд державного майна</a></li>
+                <li><img class="icon" src="img/arbitr.gov.ua.png" alt="arbitr.gov.ua"><a href="http://www.arbitr.gov.ua/" target="_blank">Вищий господарський суд</a></li>
+                <li><img class="icon" src="img/court.gov.ua.png" alt="court.gov.ua"><a href="https://court.gov.ua/" target="_blank">Судова влада України</a></li>
               </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-            </div> -->
+            </div>
 
           </div>
         </div>
