--- a/index.html
+++ b/index.html
@@ -199,12 +199,17 @@
               <ul id="">
                 <span class="badge badge-dark">*Городок/Новомиргород*</span>
                 <hr>
-                <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Sinoptik</a></li>
-                <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Rp5.ua</a></li>
-                <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Meteoprog</a></li>
-                <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Gismeteo</a></li>
-                <li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/google.maps.png" alt="google.com.maps"><a href="https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633" target="_blank">Карта Новомиргорода</a></li>
+                <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Погода_Sinoptik</a></li>
+                <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Погода_Rp5.ua</a></li>
+                <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a></li>
+				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (рынок)</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA" target="_blank">Youtube_г.Новомиргород</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCpx67qi-50ZnWOUlDqBhSNQ" target="_blank">Youtube_Новомиргородська ЗШ2</a></li>
                 <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новомиргород. Новини та події</a></li>
+                <li><img class="icon" src="img/facebook.com.ico" alt="facebook.com"><a href="https://www.facebook.com/groups/369041380158080/" target="_blank">Novomyrhorod News (facebook)</a></li>
+                <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна державна адміністрація</a></li>
+                <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новомиргородська міська рада</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Реклама*</span>
@@ -377,21 +382,22 @@
               <ul id="">
                 <span class="badge badge-success">*Другие органы и министерства*</span>
                 <hr>
-                <li><img class="icon" src="img/comin.kmu.gov.ua.gif" alt="comin.kmu.gov.ua"><a href="http://comin.kmu.gov.ua/" target="_blank">Комітет телебачення і радіомовлення</a></li>
                 <li><img class="icon" src="img/minagro.gov.ua.ico" alt="minagro.gov.ua"><a href="http://www.minagro.gov.ua/" target="_blank">Мін. аграрної політики та продов.</a></li>
                 <li><img class="icon" src="img/mvs.gov.ua.png" alt="mvs.gov.ua"><a href="http://mvs.gov.ua/" target="_blank">Мін. внутрішніх справ</a></li>
                 <li><img class="icon" src="img/moz.gov.ua.png" alt="moz.gov.ua"><a href="http://moz.gov.ua/" target="_blank">Мін. охорони здоров'я України</a></li>
                 <li><img class="icon" src="img/minfin.gov.ua.ico" alt="minfin.gov.ua"><a href="https://www.minfin.gov.ua/" target="_blank">Мін. фінансів</a></li>
                 <li><img class="icon" src="img/me.gov.ua.ico" alt="me.gov.ua"><a href="http://www.me.gov.ua/" target="_blank">Мін. економічного розвитку і торгівлі</a></li>
                 <li><img class="icon" src="img/minjust.gov.ua.png" alt="minjust.gov.ua"><a href="https://minjust.gov.ua/" target="_blank">Мін. юстиції</a></li>
+                <li><img class="icon" src="img/mon.gov.ua.png" alt="mon.gov.ua"><a href="https://mon.gov.ua/" target="_blank">Мін. освіти і науки</a></li>
+                <li><img class="icon" src="img/msp.gov.ua.ico" alt="msp.gov.ua"><a href="https://www.msp.gov.ua/" target="_blank">Мін. соціальної політики</a></li>
+                <li><img class="icon" src="img/pfu.gov.ua.png" alt="pfu.gov.ua"><a href="https://www.pfu.gov.ua/" target="_blank">Пенсійний фонд України</a></li>
+                <li><img class="icon" src="img/comin.kmu.gov.ua.gif" alt="comin.kmu.gov.ua"><a href="http://comin.kmu.gov.ua/" target="_blank">Комітет телебачення і радіомовлення</a></li>
                 <li><img class="icon" src="img/drs.gov.ua.png" alt="drs.gov.ua"><a href="http://www.drs.gov.ua/" target="_blank">Державна регуляторна служба</a></li>
                 <li><img class="icon" src="img/dsns.gov.ua.png" alt="dsns.gov.ua"><a href="http://www.dsns.gov.ua/" target="_blank">Держ. служба з надзвичайних ситуацій</a></li>
                 <li><img class="icon" src="img/sfs.gov.ua.jpg" alt="sfs.gov.ua"><a href="http://sfs.gov.ua/" target="_blank">Державна фіскальна служба</a></li>
                 <li><img class="icon" src="img/dcz.gov.ua.ico" alt="dcz.gov.ua"><a href="https://www.dcz.gov.ua/" target="_blank">Державна служба зайнятості</a></li>
-                <li><img class="icon" src="img/pfu.gov.ua.png" alt="pfu.gov.ua"><a href="https://www.pfu.gov.ua/" target="_blank">Пенсійний фонд України</a></li>
-                <li><img class="icon" src="img/amc.gov.ua.ico" alt="amc.gov.ua"><a href="http://www.amc.gov.ua/" target="_blank">Антимонопольний комітет</a></li>
-                <li><img class="icon" src="img/msp.gov.ua.ico" alt="msp.gov.ua"><a href="https://www.msp.gov.ua/" target="_blank">Мін. соціальної політики</a></li>
                 <li><img class="icon" src="img/ukrstat.gov.ua.png" alt="ukrstat.gov.ua"><a href="http://www.ukrstat.gov.ua/" target="_blank">Державна служба статистики</a></li>
+                <li><img class="icon" src="img/amc.gov.ua.ico" alt="amc.gov.ua"><a href="http://www.amc.gov.ua/" target="_blank">Антимонопольний комітет</a></li>
                 <li><img class="icon" src="img/nads.gov.ua.png" alt="nads.gov.ua"><a href="https://nads.gov.ua/" target="_blank">Нац. агентство з питань держ. служби</a></li>
                 <li><img class="icon" src="img/spfu.gov.ua.png" alt="spfu.gov.ua"><a href="http://www.spfu.gov.ua/" target="_blank">Фонд державного майна</a></li>
                 <li><img class="icon" src="img/arbitr.gov.ua.png" alt="arbitr.gov.ua"><a href="http://www.arbitr.gov.ua/" target="_blank">Вищий господарський суд</a></li>
@@ -1107,14 +1113,29 @@
               <ul id="">
                 <span class="badge badge-danger">*Новомиргород*</span>
                 <hr>
-                <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Sinoptik</a></li>
-                <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Rp5.ua</a></li>
-                <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Meteoprog</a></li>
-                <li><img class="icon" src="img/weather.com.ico" alt="weather.com"><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Weather.com</a></li>
-                <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Gismeteo</a></li>
-				
-				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/google.maps.png" alt="google.com.maps"><a href="https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633" target="_blank">Карта Новомиргорода</a></li>
+                <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Погода_Sinoptik</a></li>
+                <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Погода_Rp5.ua</a></li>
+                <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a></li>
+                <li><img class="icon" src="img/weather.com.ico" alt="weather.com"><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Погода_Weather.com</a></li>
+                <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Погода_Gismeteo</a></li>
+				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (рынок)</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA" target="_blank">Youtube_г.Новомиргород</a></li>
+                <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCpx67qi-50ZnWOUlDqBhSNQ" target="_blank">Youtube_Новомиргородська ЗШ2</a></li>
                 <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новомиргород. Новини та події</a></li>
+                <li><img class="icon" src="img/facebook.com.ico" alt="facebook.com"><a href="https://www.facebook.com/groups/369041380158080/" target="_blank">Novomyrhorod News (facebook)</a></li>
+                <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна державна адміністрація</a></li>
+                <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новомиргородська міська рада</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="github"><a href="http://novomyrgorod-school2.kr.sch.in.ua" target="_blank">Новомиргородська ЗШ №2</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-school3.edukit.kr.ua"><a href="http://novomyrgorod-school3.edukit.kr.ua/" target="_blank">Новомиргородська ЗШ №3</a></li>
+                <li><img class="icon" src="img/school-2.png" alt="zlatopilska-gymnasium.edukit.kr.ua"><a href="http://zlatopilska-gymnasium.edukit.kr.ua/" target="_blank">Златопільська гімназія</a></li>
+                <li><img class="icon" src="img/school-2.png" alt="osytniazhka-nm.edukit.kr.ua"><a href="http://osytniazhka-nm.edukit.kr.ua/" target="_blank">Оситнязька ЗШ</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="kapitanivka-school.edukit.kr.ua"><a href="http://kapitanivka-school.edukit.kr.ua/" target="_blank">Капітанівська ЗШ</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-internat.edukit.kr.ua"><a href="http://novomyrgorod-internat.edukit.kr.ua/" target="_blank">Спец.школа інтернат інтенс.пед.корекції</a></li>
+                <li><img class="icon" src="img/school-2.png" alt="pancheve-school.edukit.kr.ua"><a href="http://pancheve-school.edukit.kr.ua/" target="_blank">Панчівська ЗШ</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-specschool.edukit.kr.ua"><a href="http://novomyrgorod-specschool.edukit.kr.ua/" target="_blank">Спецшкола-інтернат І-ІІІ ступ.</a></li>
+                <li><img class="icon" src="img/school-2.png" alt="kapitanivka-proflyceum.edukit.kr.ua"><a href="http://kapitanivka-proflyceum.edukit.kr.ua/" target="_blank">Капіт-кий проф.ліцей переробної пром.</a></li>
+                <li><img class="icon" src="img/school-2.png" alt="novomyrgorod-sch2-club.edukit.kr.ua"><a href="http://novomyrgorod-sch2-club.edukit.kr.ua/" target="_blank">Євроклуб "Євроклас"</a></li>
               </ul>
             </div>
 
