--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 
             <div class="col-sm">
               <ul id="">
+			  
+		        <!-- <li><img class="icon" src="img/_settings_.png" alt="youtube"><a href="https://www.youtube.com/" target="_blank">Настройка ZAKLADOK</a></li> -->
+
                 <span class="badge badge-dark">*Поиск/Перевод/Граматика*</span>
                 <hr>
                 <li><img class="icon" src="img/google.ico" alt="Поиск Google"><a href="https://www.google.com.ua/" target="_blank">Поиск Google</a></li>
@@ -998,6 +1001,9 @@
                 <hr>
                 <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/internet/" target="_blank">ukrtelecom</a><span class="opisi">ТАРИФЫ</span></li>
                 <li><img class="icon" src="img/ukrtelecom.ua.png" alt="ukrtelecom.ua"><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ</span></li>
+                <li><img class="icon" src="img/ukrtelecom.ua.png" alt="cc.ukrtele.com"><a href="http://cc.ukrtele.com/" target="_blank">cc.ukrtele.com</a><span class="opisi">Если Вас заблокировали</span></li>
+
+
                 <li><img class="icon" src="img/my.ukrtelecom.ua.png" alt="my.ukrtelecom.ua"><a href="http://www.my.ukrtelecom.ua/" target="_blank">my.ukrtelecom</a><span class="opisi">КАБИНЕТ</span></li>
                 <li><img class="icon" src="img/novom.ulan.in.ua.png" alt="novom.ulan.in.ua"><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span></li>
                 <li><img class="icon" src="img/shtorm.net.ico" alt="shtorm.net"><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span></li>
